# mlops_mcdatos_usantoto

./: README.md
actividad1-mlops-openrate/: pyproject.toml  structure.md
actividad1-mlops-openrate/data/: training_data.csv
actividad1-mlops-openrate/src/: main.py
