[project]
name = "actividad1-mlops-openrate"
version = "0.1.0"
description = "Actividad Nro 1 Mlops"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.67.1",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
